--- a/Admin.xaml
+++ b/Admin.xaml
@@ -2,28 +2,28 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <Page.Resources>
-      <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-         <Style x:Key="DefaultWindowStyle" TargetType="Window">
-            <Setter Property="FontFamily" Value="Segoe UI"/>
-         </Style>
-         <Style x:Key="DefaultLabelStyle" TargetType="Label">
-            <Setter Property="FontFamily" Value="Segoe UI"/>
-            <Setter Property="FontSize" Value="15"/>
-         </Style>
-         <Style x:Key="DefaultTextBoxStyle" TargetType="TextBox">
-            <Setter Property="FontFamily" Value="Segoe UI"/>
-            <Setter Property="FontSize" Value="15"/>
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="Width" Value="240"/>
-            <Setter Property="BorderBrush" Value="SandyBrown"/>
-         </Style>
-         <Style x:Key="DefaultButtonStyle" TargetType="Button">
-            <Setter Property="FontFamily" Value="Segoe UI"/>
-            <Setter Property="FontSize" Value="15"/>
-            <Setter Property="BorderBrush" Value="SandyBrown"/>
-         </Style>
-      </ResourceDictionary>
-   </Page.Resources>
+    <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+      <Style x:Key="DefaultWindowStyle" TargetType="Window">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+      </Style>
+      <Style x:Key="DefaultLabelStyle" TargetType="Label">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="15"/>
+      </Style>
+      <Style x:Key="DefaultTextBoxStyle" TargetType="TextBox">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="240"/>
+        <Setter Property="BorderBrush" Value="SandyBrown"/>
+      </Style>
+      <Style x:Key="DefaultButtonStyle" TargetType="Button">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="BorderBrush" Value="SandyBrown"/>
+      </Style>
+    </ResourceDictionary>
+  </Page.Resources>
   <DockPanel Background="#FF2E2E2E">
     <Border
          Height="75"
@@ -32,88 +32,89 @@
          BorderBrush="#FFFFF9F9"
          BorderThickness="0,0,0,1"
          DockPanel.Dock="Top">
-         <DockPanel x:Name="Header">
-            <StackPanel
-               Width="674"
-               Height="76.14"
-               HorizontalAlignment="Left"
-               Background="#FF000000"
-               DockPanel.Dock="Left"
-               Orientation="Horizontal">
-               <Label
-                  Width="120"
-                  Height="57"
-                  HorizontalAlignment="Left"
-                  Margin="0,20,0,0"
-                  VerticalAlignment="Top"
-                  Content="System"
-                  FontSize="35"
-                  Foreground="#FFFDFDFD"/>
-               <Label
-                  Width="260"
-                  Height="57"
-                  HorizontalAlignment="Left"
-                  Margin="0,20,0,0"
-                  VerticalAlignment="Top"
-                  Background="#00E8E8E8"
-                  BorderThickness="0,0,0,0"
-                  Content="Administrator"
-                  FontSize="35"
-                  FontWeight="Bold"
-                  Foreground="#FFFFFFFF">
-               </Label>
-            </StackPanel>
-         </DockPanel>
-      </Border>
+      <DockPanel x:Name="Header">
+        <StackPanel
+           Width="674"
+           Height="76.14"
+           HorizontalAlignment="Left"
+           Background="#FF000000"
+           DockPanel.Dock="Left"
+           Orientation="Horizontal">
+          <Label
+             Width="120"
+             Height="57"
+             HorizontalAlignment="Left"
+             Margin="0,20,0,0"
+             VerticalAlignment="Top"
+             Content="System"
+             FontSize="35"
+             Foreground="#FFFDFDFD"/>
+          <Label
+             Width="260"
+             Height="57"
+             HorizontalAlignment="Left"
+             Margin="0,20,0,0"
+             VerticalAlignment="Top"
+             Background="#00E8E8E8"
+             BorderThickness="0,0,0,0"
+             Content="Administrator"
+             FontSize="35"
+             FontWeight="Bold"
+             Foreground="#FFFFFFFF">
+          </Label>
+        </StackPanel>
+      </DockPanel>
+    </Border>
     <Grid x:Name="MainGrid" Background="#FF2E2E2E">
-         <Border
-            Name="MainBorder"
-            Margin="10,30,10,10"
-            BorderBrush="#FFFEFEFE"
-            BorderThickness="1"
-            CornerRadius="5,5,5,5">
-            <Border.Background>
-               <LinearGradientBrush StartPoint="0.504,0.03" EndPoint="0.504,0.632">
-                  <GradientStop Color="#FFFFC934"/>
-                  <GradientStop Offset="0.567" Color="#FFFFFFFF"/>
-               </LinearGradientBrush>
-            </Border.Background>
-            <Grid>
-              <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="275" />
-                <ColumnDefinition Width="*" />
-              </Grid.ColumnDefinitions>
-                <StackPanel VerticalAlignment="Top" Orientation="Horizontal" Grid.Column="0">                   
-                  <StackPanel Width="275">
-                    <Label Name="lblComputerName" 
-                      Width="200"
-                      HorizontalAlignment="Left"
-                      Margin="5,5,0,0"
-                      VerticalAlignment="Center"
-                      Style="{StaticResource DefaultLabelStyle}">Computer Name:
-                   </Label>
-                    <TextBox
-                      Name="txtComputerName"
-                      HorizontalAlignment="Left"
-                      Margin="10,0,0,0"
-                      VerticalAlignment="Center"
-                      Style="{StaticResource DefaultTextBoxStyle}">
-                   </TextBox>
-                		<Button Name="btnSearchComputer" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94">Search for PC</Button>
-                		<Button Name="btnLocalAdmins" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94">Local Admins</Button>
-                		<Button Name="btnProcesses" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94">Processes</Button>
-                		<Button Name="btnServices" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94">Services</Button>
-                		<Label Name="lblUserName" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Center" Style="{StaticResource DefaultLabelStyle}">Identity/Filter:</Label>
-                		<TextBox Name="txtUserName" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Center" Style="{StaticResource DefaultTextBoxStyle}" />
-                		<Button Name="btnSearch" IsDefault="true" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94">Search</Button>
-                  </StackPanel>
-                </StackPanel>
-                <Grid Grid.Column="1">
-                    <ListView Margin="6" Name="listView1">
-          			    </ListView>
-              	</Grid>
-            </Grid>
-          </Border>
-	    </Grid>
-	</DockPanel>
+      <Border
+         Name="MainBorder"
+         Margin="10,30,10,10"
+         BorderBrush="#FFFEFEFE"
+         BorderThickness="1"
+         CornerRadius="5,5,5,5">
+        <Border.Background>
+          <LinearGradientBrush StartPoint="0.504,0.03" EndPoint="0.504,0.632">
+            <GradientStop Color="#FFFFC934"/>
+            <GradientStop Offset="0.567" Color="#FFFFFFFF"/>
+          </LinearGradientBrush>
+        </Border.Background>
+        <Grid>
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="275" />
+            <ColumnDefinition Width="*" />
+          </Grid.ColumnDefinitions>
+          <StackPanel VerticalAlignment="Top" Orientation="Horizontal" Grid.Column="0">
+            <StackPanel Width="275">
+              <Label Name="lblComputerName"
+                Width="200"
+                HorizontalAlignment="Left"
+                Margin="5,5,0,0"
+                VerticalAlignment="Center"
+                Style="{StaticResource DefaultLabelStyle}">
+                Computer Name:
+              </Label>
+              <TextBox
+                Name="txtComputerName"
+                HorizontalAlignment="Left"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Style="{StaticResource DefaultTextBoxStyle}">
+              </TextBox>
+              <Button Name="btnSearchComputer" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94" Style="{StaticResource DefaultButtonStyle}">Detail</Button>
+              <Button Name="btnAdmin" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94" Style="{StaticResource DefaultButtonStyle}">Admin</Button>
+              <Button Name="btnProcess" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94" Style="{StaticResource DefaultButtonStyle}">Process</Button>
+              <Button Name="btnService" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94" Style="{StaticResource DefaultButtonStyle}">Service</Button>
+              <Label Name="lblUserName" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Center" Style="{StaticResource DefaultLabelStyle}">Identity/Filter:</Label>
+              <TextBox Name="txtUserName" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Center" Style="{StaticResource DefaultTextBoxStyle}" />
+              <Button Name="btnSearch" IsDefault="true" HorizontalAlignment="Left" Margin="10,5,0,0" Width="94" Style="{StaticResource DefaultButtonStyle}">Search</Button>
+            </StackPanel>
+          </StackPanel>
+          <Grid Grid.Column="1">
+            <ListView Margin="6" Name="listView1">
+            </ListView>
+          </Grid>
+        </Grid>
+      </Border>
+    </Grid>
+  </DockPanel>
 </Page>
